--- a/html/search_sample.html
+++ b/html/search_sample.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="format-detection" content="telephone=no" />
-	<title>슈퍼스탁</title>
-	<meta name="robots" content="슈퍼스탁">
-	<meta name="description" content="슈퍼스탁.">
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="theme-color" content="#e57828">
-	<!-- 오픈 그래프 -->
-	<meta property="og:title" content="슈퍼스탁" />
-	<meta property="og:type" content="website">
-	<meta property="og:description" content="슈퍼스탁">
-	<meta property="og:image" content="http://godlife.ivyro.net/SStokes/img/SStokes_thumb.png">
-	<meta property="og:image:width" content="410" />
-	<meta property="og:image:height" content="210" />
-	<meta property="og:url" content="">
-	<!-- 파비콘 favicon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="img/android-chrome-192x192.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-	<!-- jquery -->
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-	<!-- highstock -->
-	<script defer src="https://code.highcharts.com/stock/highstock.js"></script>
-	<script defer src="https://code.highcharts.com/stock/modules/data.js"></script>
-	<script defer src="https://code.highcharts.com/stock/modules/hollowcandlestick.js"></script>
-	<script src="../css/ss_chartjs.js"></script>
-	<!-- css -->
-	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
-	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
-	<!-- js -->
-	<script type="text/javascript" src="../css/add_design.js"></script>
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="format-detection" content="telephone=no" />
+		<title>슈퍼스탁</title>
+		<meta name="robots" content="슈퍼스탁">
+		<meta name="description" content="슈퍼스탁.">
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="theme-color" content="#e57828">
+		<!-- 오픈 그래프 -->
+		<meta property="og:title" content="슈퍼스탁" />
+		<meta property="og:type" content="website">
+		<meta property="og:description" content="슈퍼스탁">
+		<meta property="og:image" content="http://godlife.ivyro.net/SStokes/img/SStokes_thumb.png">
+		<meta property="og:image:width" content="410" />
+		<meta property="og:image:height" content="210" />
+		<meta property="og:url" content="">
+		<!-- 파비콘 favicon -->
+		<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="192x192" href="img/android-chrome-192x192.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+		<!-- jquery -->
+		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+		<!-- highstock -->
+		<script defer src="https://code.highcharts.com/stock/highstock.js"></script>
+		<script defer src="https://code.highcharts.com/stock/modules/data.js"></script>
+		<script defer src="https://code.highcharts.com/stock/modules/hollowcandlestick.js"></script>
+		<script src="../css/ss_chartjs.js"></script>
+		<!-- Swiper -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+		<!-- css -->
+		<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
+		<!-- js -->
+		<script type="text/javascript" src="../css/add_design.js"></script>
+		<!-- //swiper -->
+		<script>
+			$(document).ready(function () {
+				var swiper = new Swiper('.maingameSwiper', {
+					autoHeight: true,
+					slidesPerView: "auto",
+					pagination: {
+						el: ".swiper-pagination",
+					},
+				});
+			});
+		</script>
+	</head>
 
 <body>
 
