--- a/html/tsst_p11.html
+++ b/html/tsst_p11.html
@@ -98,7 +98,8 @@
 									onerror='this.src="../images/common//empty_logo.jpg";' /></a></p>
 						<p class="name" style="width: 150px;"><a href="/stockbot/search.php?sn=122900">아이마켓코리아</a></p>
 					</div>
-					<p class="type"><a href="/stockbot/ss_blist.php?nst=1"><img src="../images/cont/ico_txt_blue_chip.png" alt="우량주" /></a></p>
+					<p class="type"><a href="/stockbot/ss_blist.php?nst=1"><img
+								src="../images/cont/ico_txt_blue_chip.png" alt="우량주" /></a></p>
 					<p class="desc">인터파크 계열의 B2B 전자상거래 회사</p>
 				</div>
 				<div class="tbl_wrap02">
@@ -111,17 +112,13 @@
 						</colgroup>
 						<thead>
 							<tr>
-								<th class="th01"><img
-										src="../images/cont/add/txt_analysis_tbl_01.png"
-										class="pdl_10" alt="투자의견" /></th>
-								<th class="th02"><img
-										src="../images/cont/add/txt_analysis_tbl_02.png"
-										class="pdl_10" alt="목표가" /></th>
-								<th class="th03"><img
-										src="../images/cont/add/txt_target_tbl_01.png"
-										class="pdl_10" alt="추천가" /></th>
-								<th class="th04"><img
-										src="../images/cont/add/txt_analysis_tbl_04.png"
+								<th class="th01"><img src="../images/cont/add/txt_analysis_tbl_01.png" class="pdl_10"
+										alt="투자의견" /></th>
+								<th class="th02"><img src="../images/cont/add/txt_analysis_tbl_02.png" class="pdl_10"
+										alt="목표가" /></th>
+								<th class="th03"><img src="../images/cont/add/txt_target_tbl_01.png" class="pdl_10"
+										alt="추천가" /></th>
+								<th class="th04"><img src="../images/cont/add/txt_analysis_tbl_04.png"
 										style="height: 17px;" class="pdl_15" alt="기대수익률" /></th>
 							</tr>
 						</thead>
@@ -133,11 +130,9 @@
 								<td class="td04 txt nonebg"><span class="f22 increase">26.0</span><span>%</span></td>
 							</tr>
 							<tr>
-								<th class="th05" colspan=2><img
-										src="../images/cont/add/txt_recommend_tbl_add1.png"
+								<th class="th05" colspan=2><img src="../images/cont/add/txt_recommend_tbl_add1.png"
 										class="pdl_10" alt="상승시 분할 매도가" /></th>
-								<th class="th06" colspan=2><img
-										src="../images/cont/add/txt_recommend_tbl_add2.png"
+								<th class="th06" colspan=2><img src="../images/cont/add/txt_recommend_tbl_add2.png"
 										class="pdl_10" alt="하락시 손절 매도가" /></th>
 							</tr>
 							<tr>
@@ -159,24 +154,21 @@
 				<p class="total_score"> <span class="score">221</span><span class="txt">점</span> </p>
 				<ul class="instrument_wrap">
 					<li>
-						<p class="tit"><img src="../images/cont/txt_score_type3.png"
-								alt="수급분석" /></p>
-						<img src="../images/cont/score/img_score_instrument_091.png"
-							class="img_instrument" alt="점수이미지" />
+						<p class="tit"><img src="../images/cont/txt_score_type3.png" alt="수급분석" /></p>
+						<img src="../images/cont/score/img_score_instrument_091.png" class="img_instrument"
+							alt="점수이미지" />
 						<p class="score"><span>91</span>점</p>
 					</li>
 					<li>
-						<p class="tit"><img src="../images/cont/txt_score_type2.png"
-								alt="밸류에이션" /></p>
-						<img src="../images/cont/score/img_score_instrument_090.png"
-							class="img_instrument" alt="점수이미지" />
+						<p class="tit"><img src="../images/cont/txt_score_type2.png" alt="밸류에이션" /></p>
+						<img src="../images/cont/score/img_score_instrument_090.png" class="img_instrument"
+							alt="점수이미지" />
 						<p class="score"><span>90</span>점</p>
 					</li>
 					<li>
-						<p class="tit"><img src="../images/cont/txt_score_type1.png"
-								alt="펀더멘탈" /></p>
-						<img src="../images/cont/score/img_score_instrument_040.png"
-							class="img_instrument" alt="점수이미지" />
+						<p class="tit"><img src="../images/cont/txt_score_type1.png" alt="펀더멘탈" /></p>
+						<img src="../images/cont/score/img_score_instrument_040.png" class="img_instrument"
+							alt="점수이미지" />
 						<p class="score"><span>40</span>점</p>
 					</li>
 				</ul>
@@ -192,8 +184,7 @@
 						</div>
 						<!--투자포인트-->
 						<div class="inbox">
-							<h5><img src="../images/cont/h4_tit_02.png?pp=001"
-									alt="투자 포인트" /></h5>
+							<h5><img src="../images/cont/h4_tit_02.png?pp=001" alt="투자 포인트" /></h5>
 							<ul class="investment_point">
 								<li>2016년 4분기 연결 실적: 매출액 1조800억원(전년 동기비 +24%), 영업이익 237억원(+89%), 순이익(지배) 72억원(+4%) ※
 									매출액과 영업이익, 시장 컨센서스(최근 1개월간 추정치 평균)를 각각 15%와 90% 상회</li>
@@ -208,8 +199,7 @@
 					<div class="group2 dpb swiper-slide">
 						<!--주요 투자지표-->
 						<div class="inbox ofh">
-							<h5><img src="../images/cont/h4_tit_03.png?pp=001"
-									alt="주요 투자지표" /></h5>
+							<h5><img src="../images/cont/h4_tit_03.png?pp=001" alt="주요 투자지표" /></h5>
 							<ul class="total_info">
 								<li>
 									<p class="title">EPS<span>주당순이익</span></p>
@@ -242,7 +232,7 @@
 									<p class="data"><span>6.75%</span></p>
 								</li>
 							</ul>
-						</div>						
+						</div>
 
 						<!--v차트 분석 (특허출원)-->
 						<div class="inbox">
@@ -293,27 +283,12 @@
 			<!-- //maingameSwiper -->
 
 			<!--푸터-->
-			<footer id="footer" class="non_members">
-				<div style="background: #fff; padding: 15px 0;">
-					<p style=" width: 290px; margin: 0 auto; color: #000; text-align: center; line-height: 18px;">T슈퍼스탁이
-						제공하는 정보는 투자 참고사항 일뿐,<br />
-						투자권유 또는 주식거래를 목적으로 하지 않습니다.<br />
-						투자판단의 최종 책임은 이용자에게 있습니다.</p>
-				</div>
-				<div class="wrap">
-					<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
-						제공하는 프리미엄 주식서비스 입니다.</p>
-					<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
-								class="vam" style="height: 22px;"></span><span
-							class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span>
-					</p>
-				</div>
-			</footer>
-			<div class="btn_join_fixed"> <a href="javascript:ClickServiceNoMember();"> <img
-						src="../images/cont/btn_join_1.png" alt="매매전략(추천가) 확인하기 
- 부가서비스(22,000원)가입하기"> </a> </div>
-		</div>
-	</div>
+<div style="margin:0;padding:0;">
+    <iframe src="https://m.itooza.com/minsstockbot/foot_iframe.php" scrolling="no" frameborder="0"
+        style="border:none; overflow:hidden; width:100%; height:auto;min-height:270px;"
+        allowtransparency="true"></iframe>
+</div>
+</div>
 </body>
 
 </html>
