--- a/html/tsst_p12.html
+++ b/html/tsst_p12.html
@@ -149,27 +149,14 @@
 					</div>
 				</div>
 			</div>
+			
 			<!--푸터-->
-			<footer id="footer" class="non_members">
-				<div style="background: #fff; padding: 15px 0;">
-					<p style=" width: 290px; margin: 0 auto; color: #000; text-align: center; line-height: 18px;">T슈퍼스탁이
-						제공하는 정보는 투자 참고사항 일뿐,<br />
-						투자권유 또는 주식거래를 목적으로 하지 않습니다.<br />
-						투자판단의 최종 책임은 이용자에게 있습니다.</p>
-				</div>
-				<div class="wrap">
-					<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
-						제공하는 프리미엄 주식서비스 입니다.</p>
-					<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
-								class="vam" style="height: 22px;"></span><span
-							class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span>
-					</p>
-				</div>
-			</footer>
-			<div class="btn_join_fixed"> <a href="javascript:ClickServiceNoMember();"> <img
-						src="../images/cont/btn_join_2.png" alt="수익 예상 종목 확인하기 부가서비스(22,000원)가입하기"> </a> </div>
-		</div>
-	</div>
+<div style="margin:0;padding:0;">
+    <iframe src="https://m.itooza.com/minsstockbot/foot_iframe.php" scrolling="no" frameborder="0"
+        style="border:none; overflow:hidden; width:100%; height:auto;min-height:270px;"
+        allowtransparency="true"></iframe>
+</div>
+</div>
 </body>
 
 </html>
