--- a/html/tsst_p13.html
+++ b/html/tsst_p13.html
@@ -228,12 +228,16 @@
 			</div>
 			
 			<!--푸터-->
-<div style="margin:0;padding:0;">
-    <iframe src="https://m.itooza.com/minsstockbot/foot_iframe.php" scrolling="no" frameborder="0"
-        style="border:none; overflow:hidden; width:100%; height:auto;min-height:270px;"
-        allowtransparency="true"></iframe>
-</div>
-</div>
+		<footer id="footer">	
+			<p class="txt">슈퍼스탁은 데이터히어로와 제휴하여 ㈜헥토이노베이션이 <br>제공하는 <strong class="fc_red">프리미엄 주식서비스</strong>입니다.</p>
+			<div class="cs">
+				<strong>고객센터 1599-7084</strong><br>평일 09:00~18:00(주말, 공휴일 휴무)
+			</div>
+			<address>
+				㈜헥토이노베이션 대표이사: 이현철 사업자등록번호 : 214-88-39117<br>통신판매업신고 : 제2015 –서울강남 – 00012호<br>서울시 강남구 테헤란로 34길 6 태광타워 12층, 13층<br>Email: <a href="mailto:in.help@hecto.co.kr">in.help@hecto.co.kr</a><br>Copyright © 2022 Hecto Innovation. All rights reserved.
+			</address>
+		</footer>
+	</div>
 </body>
 
 </html>
