--- a/html/search_sample.html
+++ b/html/search_sample.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta name="format-detection" content="telephone=no" />
-		<title>슈퍼스탁</title>
-		<meta name="robots" content="슈퍼스탁">
-		<meta name="description" content="슈퍼스탁.">
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="theme-color" content="#e57828">
-		<!-- 오픈 그래프 -->
-		<meta property="og:title" content="슈퍼스탁" />
-		<meta property="og:type" content="website">
-		<meta property="og:description" content="슈퍼스탁">
-		<meta property="og:image" content="http://godlife.ivyro.net/SStokes/img/SStokes_thumb.png">
-		<meta property="og:image:width" content="410" />
-		<meta property="og:image:height" content="210" />
-		<meta property="og:url" content="">
-		<!-- 파비콘 favicon -->
-		<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="192x192" href="img/android-chrome-192x192.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-		<!-- jquery -->
-		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-		<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-		<!-- highstock -->
-		<script defer src="https://code.highcharts.com/stock/highstock.js"></script>
-		<script defer src="https://code.highcharts.com/stock/modules/data.js"></script>
-		<script defer src="https://code.highcharts.com/stock/modules/hollowcandlestick.js"></script>
-		<script src="../css/ss_chartjs.js"></script>
-		<!-- Swiper -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-		<!-- css -->
-		<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
-		<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
-		<!-- js -->
-		<script type="text/javascript" src="../css/add_design.js"></script>
-		<!-- //swiper -->
-		<script>
-			$(document).ready(function () {
-				var swiper = new Swiper('.maingameSwiper', {
-					autoHeight: true,
-					slidesPerView: "auto",
-					pagination: {
-						el: ".swiper-pagination",
-					},
-				});
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="format-detection" content="telephone=no" />
+	<title>슈퍼스탁</title>
+	<meta name="robots" content="슈퍼스탁">
+	<meta name="description" content="슈퍼스탁.">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="theme-color" content="#e57828">
+	<!-- 오픈 그래프 -->
+	<meta property="og:title" content="슈퍼스탁" />
+	<meta property="og:type" content="website">
+	<meta property="og:description" content="슈퍼스탁">
+	<meta property="og:image" content="http://godlife.ivyro.net/SStokes/img/SStokes_thumb.png">
+	<meta property="og:image:width" content="410" />
+	<meta property="og:image:height" content="210" />
+	<meta property="og:url" content="">
+	<!-- 파비콘 favicon -->
+	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="img/android-chrome-192x192.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+	<!-- jquery -->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+	<!-- highstock -->
+	<script defer src="https://code.highcharts.com/stock/highstock.js"></script>
+	<script defer src="https://code.highcharts.com/stock/modules/data.js"></script>
+	<script defer src="https://code.highcharts.com/stock/modules/hollowcandlestick.js"></script>
+	<script src="../css/ss_chartjs.js"></script>
+	<!-- Swiper -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+	<!-- css -->
+	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
+	<!-- js -->
+	<script type="text/javascript" src="../css/add_design.js"></script>
+	<!-- //swiper -->
+	<script>
+		$(document).ready(function () {
+			var swiper = new Swiper('.maingameSwiper', {
+				autoHeight: true,
+				slidesPerView: "auto",
+				pagination: {
+					el: ".swiper-pagination",
+				},
 			});
-		</script>
-	</head>
+		});
+	</script>
+</head>
 
 <body>
 
@@ -152,7 +152,8 @@
 									style=" height: 36px !important;" alt="스토봇 종합 분석 결과"></h5>
 							<p class="total_score"
 								style="background:url('//menu.itooza.com/stobot/mobile/index/img_score_flag2.png') no-repeat scroll 10px 0 / 115px auto">
-								<span class="score" style="margin-left:55px;">65</span><span class="txt">점</span> </p>
+								<span class="score" style="margin-left:55px;">65</span><span class="txt">점</span>
+							</p>
 							<ul class="instrument_wrap">
 								<li>
 									<p class="tit"><img
@@ -182,7 +183,8 @@
 							<p class="clear"
 								style="background-color: #eee; margin:10px 5px 0 ; padding: 10px 0; text-align: center;">
 								<img src="https://nimaqe002.commutil.kr/itoozamenu/stobot/mobile/cont/txt_search_bot_info.png"
-									alt="종합점수(100점 만점) = 기업분석 + 수급분석" style="height:18px; "></p>
+									alt="종합점수(100점 만점) = 기업분석 + 수급분석" style="height:18px; ">
+							</p>
 						</div>
 
 						<!-- 이미지차트   -->
@@ -221,7 +223,7 @@
 							hr {
 								display: block;
 							}
-						</style>						
+						</style>
 						<div id="containeroutline1_2" class="outline_style"></div>
 						<script
 							src="https://nimaqe002.commutil.kr/itoozamobile/jquery/jquery.number.js?pp=001"></script>
@@ -531,14 +533,18 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<!--푸터-->
-<div style="margin:0;padding:0;">
-    <iframe src="https://m.itooza.com/minsstockbot/foot_iframe.php" scrolling="no" frameborder="0"
-        style="border:none; overflow:hidden; width:100%; height:auto;min-height:270px;"
-        allowtransparency="true"></iframe>
-</div>
-</div>
-</body>
+			<footer id="footer">	
+				<p class="txt">슈퍼스탁은 데이터히어로와 제휴하여 ㈜헥토이노베이션이 <br>제공하는 <strong class="fc_red">프리미엄 주식서비스</strong>입니다.</p>
+				<div class="cs">
+					<strong>고객센터 1599-7084</strong><br>평일 09:00~18:00(주말, 공휴일 휴무)
+				</div>
+				<address>
+					㈜헥토이노베이션 대표이사: 이현철 사업자등록번호 : 214-88-39117<br>통신판매업신고 : 제2015 –서울강남 – 00012호<br>서울시 강남구 테헤란로 34길 6 태광타워 12층, 13층<br>Email: <a href="mailto:in.help@hecto.co.kr">in.help@hecto.co.kr</a><br>Copyright © 2022 Hecto Innovation. All rights reserved.
+				</address>
+			</footer>
+		</div>
+	</body>
 
 </html>
