--- a/html/tsst_p28_1.html
+++ b/html/tsst_p28_1.html
@@ -41,13 +41,46 @@
 		<div class="top-wrap">
 
 			<!--헤더-->
-			<header id="header">
-				<div class="top">
-					<h1><a href="http://m.itooza.com"><img
-								src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
-					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
+			
+			<!--2depth 메뉴-->
+			<div class="sub_menu">
+				<nav class="nav">
+					<h2><span class="item">적중! 수익실현 종목</span></h2>
+					<button class="btn_back" type="button" onclick="history.back();"> <span>뒤로</span> </button>
+				</nav>
+			</div>
+
+			<!-- 191111 검색기능 추가 -->
+			<div class="rcv">
+				<button class="btn_hback" type="button"><span>페이지 뒤로가기</span> </button>
+				<button class="btn_thome" type="button"><span>검색결과 전체보기</span></button>
+				<form action="https://m.itooza.com/minsstockbot/search_itz.php" method="get" name="sch_form">
+					<input type="hidden" id="seCode" name="cn" value="">
+					<fieldset>
+						<input type="text" onkeydown="hitEnterKey(event);"
+							onkeyup="hitEnterKey(event);ShowHideBtn();ShowPlaceholder();"
+							placeholder="종목명 (종목코드) 혹은 키워드를 입력하세요." value="" autocomplete="off" maxlength="255"
+							id="seName" name="sn" class="input_txt input_txt_fcs"
+							onfocus="DelPlaceholder();ShowHideBtn();SetIntervalSearchWord();"
+							onblur="ShowPlaceholder();ShowHideBtn();ClrIntervalSearchWord();">
+						<span class="searchclear" style="display: none;"><img
+								src="https://nimaqe002.commutil.kr/itoozamenu/stobot/mobile/common/searchclear.png"
+								alt="검색어지우기"></span>
+						<a href="javascript:SearchIt(document.sch_form, '1');"
+							onclick="gtag('event', 'view_search', {'event_category' : 'btn_search'});"><img
+								src="https://nimaqe002.commutil.kr/itoozamenu/stobot/mobile/images/sch_btn.png" alt="검색"
+								class="searchBtn"></a>
+					</fieldset>
+				</form>
+				<div style="display: none;" id="schdispDIV" class="ly_rcv">
+					<ul id="schdispUL" class="lst_ctt">
+					</ul>
+					<div class="sch_clse">
+						<span class="clse"><a href="javascript:ly_close();" style="cursor:hand;">닫기</a></span>
+					</div>
 				</div>
-			</header>
+			</div>
+			<!-- // 191111 검색기능 추가 끝 -->
 
 			<!--메뉴-->
 			<div id="menu">
@@ -63,7 +96,9 @@
 				</nav>
 			</div>
 
+			
 		</div>
+		
 		<div id="ss_wrap" class="tsst_ver">
 			<div class="index_section sub_wrap">
 				<!--적중 종목 리스트-->
@@ -383,13 +418,18 @@
 				
 			</div>
 		</div>
+		
 		<!--푸터-->
-<div style="margin:0;padding:0;">
-    <iframe src="https://m.itooza.com/minsstockbot/foot_iframe.php" scrolling="no" frameborder="0"
-        style="border:none; overflow:hidden; width:100%; height:auto;min-height:270px;"
-        allowtransparency="true"></iframe>
-</div>
-</div>
+		<footer id="footer">	
+			<p class="txt">슈퍼스탁은 데이터히어로와 제휴하여 ㈜헥토이노베이션이 <br>제공하는 <strong class="fc_red">프리미엄 주식서비스</strong>입니다.</p>
+			<div class="cs">
+				<strong>고객센터 1599-7084</strong><br>평일 09:00~18:00(주말, 공휴일 휴무)
+			</div>
+			<address>
+				㈜헥토이노베이션 대표이사: 이현철 사업자등록번호 : 214-88-39117<br>통신판매업신고 : 제2015 –서울강남 – 00012호<br>서울시 강남구 테헤란로 34길 6 태광타워 12층, 13층<br>Email: <a href="mailto:in.help@hecto.co.kr">in.help@hecto.co.kr</a><br>Copyright © 2022 Hecto Innovation. All rights reserved.
+			</address>
+		</footer>
+	</div>
 </body>
 
 </html>
