--- a/html/search_itz.html
+++ b/html/search_itz.html
@@ -537,7 +537,7 @@
 							<span class="schList">PCB</span>
 						</a>
 						<span class="total">평균 등락률</span>
-						<span class="score increase"><i class="arrow"></i> 2.2%</span>
+						<span class="score decrease"><i class="arrow"></i> 2.2%</span>
 					</li>
 					<li class="result">
 						<a href="#">
