--- a/html/search_sample.html
+++ b/html/search_sample.html
@@ -125,7 +125,10 @@
 				<!--기사 영역-->
 				<div class="cont_wrap">
 					<div class="item_wrap">
-						<p class="desc">반도체·스마트폰·가전제품·디스플레이를 만드는 우리나라 대표 글로벌 기업</p>
+						<p class="desc">
+							<span>반도체·스마트폰·가전제품·디스플레이를 만드는 우리나라 대표 글로벌 기업반도체·스마트폰·가전제품·디스플레이를 만드는 우리나라 대표 글로벌 기업반도체·스마트폰·가전제품·디스플레이를 만드는 우리나라 대표
+								글로벌 기업반도체·스마트폰·가전제품·디스플레이를 만드는 우리나라 대표 글로벌 기업</span>
+						</p>
 						<div class="price_wrap">
 							<p class="stock_price"> <span>61,600</span> 원</p>
 							<div class="gap_wrap">
