기업개요2줄, 뉴스 제거 등

--- a/html/ss_sample.html
+++ b/html/ss_sample.html
@@ -130,7 +130,7 @@
 						<p class="name" style="width: 150px;"><a
 								href="https://m.itooza.com/minsstockbot/search_itz.php?sn=004690">삼천리</a></p>
 					</div>
-					<p class="desc">인천·경기도 지역 도시가스 공급업체</p>
+					<p class="desc">인천·경기도 지역 도시가스 공급업체인천·경기도 지역 도시가스 공급업체인천·경기도 지역 도시가스 공급업체인천·경기도 지역 도시가스 공급업체인천·경기도 지역 도시가스 공급업체</p>
 				</div>
 				<div class="tbl_wrap02">
 					<table cellpadding="0" cellspacing="0" class="tbl_target">
