--- a/html/tsst_p23.html
+++ b/html/tsst_p23.html
@@ -120,7 +120,7 @@
 						alt="T슈퍼스탁 로봇엔진이 분석한 최고의 주식정보를 제공 합니다." /></a> </div>
 			<div class="index_section">
 				<h3><a href="tsst_p26_1.html"><img src="../img/index/tit_index_01_01.png" alt="종목 추천" /></a></h3>
-				<p class="btn_more"><a href="#"><img alt="더보기" src="../img/index/btn_more_01.png"></a></p>
+				<p class="btn_more"><a href="#">더보기 +</a></p>
 				<div class="li_wrap" data-key="2" data-addkey="" data-page="1" data-end="0" data-onewidth="172"
 					data-maxwidth="2064" data-limit="10" style=" -webkit-overflow-scrolling:touch;">
 					<ul class="type02 scrollul" style="width: 2064px;">
@@ -283,7 +283,7 @@
 			</div>
 			<div class="index_section">
 				<h3><a href="tsst_p28_1.html"><img src="../img/index/tit_index_02.png" alt="적중! 수익실현 종목" /></a></h3>
-				<p class="btn_more"><a href="tsst_p28_1.html"><img alt="더보기" src="../img/index/btn_more_01.png"></a>
+				<p class="btn_more"><a href="tsst_p28_1.html"><a href="#">더보기 +</a></a>
 				</p>
 				<div class="li_wrap" data-key="3" data-addkey="0" data-page="1" data-end="0" data-onewidth="150"
 					data-maxwidth="1500" data-limit="10" style=" -webkit-overflow-scrolling:touch;">
@@ -601,8 +601,7 @@
 				<h3><a href="/stockbot/m_invgood.php"><img alt="종목 점수 (투자 매력도 상위 종목)"
 							src="../img/index/tit_index_09.png"></a></h3>
 				<div class="tbl_wrap" style="border:none;">
-					<p class="btn_more01"><a href="/stockbot/m_invgood.php"><img alt="더보기"
-								src="../img/index/btn_more_01.png"></a></p>
+					<p class="btn_more01"><a href="#">더보기 +</a></p>
 					<table cellspacing="0" cellpadding="0" style="width:100%;">
 						<colgroup>
 							<col width="10%">
@@ -660,7 +659,7 @@
 			<!--테마 급등주 분석-->
 			<div class="index_section">
 				<h3><a href="/stockbot/ss_tmlist.php"><img alt="업종/테마" src="../img/index/tit_index_04.png"></a></h3>
-				<p class="btn_more"><a href="#"><img alt="더보기" src="../img/index/btn_more_01.png"></a></p>
+				<p class="btn_more"><a href="#">더보기 +</a></p>
 				<div style=" -webkit-overflow-scrolling:touch;" data-limit="10" data-maxwidth="1950" data-onewidth="195"
 					data-end="0" data-page="1" data-addkey="" data-key="tm" class="li_wrap">
 					<ul style="width: 1950px;" class="theme_card scrollul">
